# synapse-real

./: .cursorrules  .env.dev  .env.example  .gitignore  AGENTS.md  Makefile  README.md  _login.json  _query.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.backup
backend/: Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-entrypoint.sh  manual_test.db  pyproject.toml  test_5c6bfc08-f605-4d08-9e65-9a210e65549d.db  test_integration.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_rbac_tables.py  003_audit_log.py  004_conversations.py
backend/app/: config.py  dependencies.py  limiter.py  main.py
backend/app/api/: deps.py  router.py
backend/app/connectors/: base.py  github.py  google_drive.py  jira.py  mock.py  registry.py  slack.py
backend/app/core/: audit_logger.py  auth.py  chunker.py  citation_builder.py  crypto.py  embedding.py  expert_router.py  graph_search.py  llm_client.py  prompt_builder.py  query_engine.py  retrieval_types.py  vector_search.py
backend/app/db/: neo4j.py  postgres.py  qdrant.py  redis.py
backend/app/models/: audit.py  base.py  conversation.py  data_source.py  ingestion_job.py  role.py  session.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  common.py  conversation.py  query.py  source.py  user.py
backend/app/services/: audit_service.py  auth_service.py  query_service.py  source_service.py  user_service.py
backend/app/tasks/: ingest.py
backend/app/workers/: celery_app.py  cleanup_tasks.py  ingestion_tasks.py  sync_tasks.py
backend/scripts/: generate_mock_docs.py  seed_data.py  seed_demo_data.py  smoke_test.sh
backend/tests/: conftest.py  factories.py
(+174 files in other folders)
